--- a/index.html
+++ b/index.html
@@ -9,6 +9,103 @@
     <link rel="icon" href="C:\Users\Gabriel Melo\Downloads\istockphoto-981782034-170667a-removebg-preview.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
+    /* Responsividade */
+@media (max-width: 1024px) {
+    nav .nav-links {
+        display: none; /* Esconde os links de navegação em telas menores */
+    }
+
+    nav .logo {
+        font-size: 1.5rem; /* Ajusta o tamanho da logo para telas menores */
+    }
+
+    .cta-button {
+        font-size: 1rem; /* Ajusta o tamanho do botão */
+        padding: 10px 20px; /* Ajusta o padding do botão */
+    }
+
+    .timeline::after {
+        left: 30px; /* Ajusta a linha central da timeline */
+    }
+
+    .container-timeline {
+        width: 100%; /* Faz os itens da timeline ocuparem 100% da largura */
+        text-align: left;
+    }
+
+    header h1 {
+        font-size: 2.2rem; /* Reduz o tamanho do título para telas menores */
+    }
+
+    .about-photo img {
+        width: 150px; /* Ajusta a largura da imagem na seção "Sobre" */
+        height: 150px; /* Ajusta a altura da imagem na seção "Sobre" */
+    }
+
+    .about-content {
+        text-align: center;
+    }
+
+    .contact-links {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .link-card {
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    /* Nav Links - Menu */
+    nav .nav-links {
+        display: block; /* Exibe o menu em telas pequenas */
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: #fff;
+        width: 100%;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    nav .nav-links li {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    nav .nav-links a {
+        display: block;
+        padding: 10px 20px;
+    }
+
+    nav .logo {
+        font-size: 1.5rem; /* Ajusta o tamanho da logo para telas muito pequenas */
+    }
+
+    .cta-button {
+        font-size: 1rem; /* Ajusta o tamanho do botão */
+        padding: 10px 20px; /* Ajusta o padding do botão */
+    }
+
+    .timeline::after {
+        left: 30px; /* Ajusta a linha central da timeline */
+    }
+
+    .container-timeline {
+        width: 100%; /* Faz os itens da timeline ocuparem 100% da largura */
+        text-align: left;
+    }
+
+    header h1 {
+        font-size: 2rem; /* Reduz o tamanho do título para telas muito pequenas */
+    }
+
+    .about-photo img {
+        width: 120px; /* Ajusta a largura da imagem na seção "Sobre" */
+        height: 120px; /* Ajusta a altura da imagem na seção "Sobre" */
+    }
+}
+
         * {
             margin: 0;
             padding: 0;
@@ -259,6 +356,19 @@
             }
         }
     </style>
+    <style>
+    /* Seus estilos existentes... */
+    
+    /* Responsividade */
+    @media (max-width: 1024px) {
+        /* Estilos para dispositivos de até 1024px de largura */
+    }
+
+    @media (max-width: 768px) {
+        /* Estilos para dispositivos de até 768px de largura */
+    }
+</style>
+
 </head>
 <head>
     <meta charset="UTF-8">
