--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     </div>
     <div class="contact-links" style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
         <!-- LinkedIn -->
-        <a href="www.linkedin.com/in/gabriel-melo-dos-santos-dias-90b842314" target="_blank" class="contact-link">
+        <a href="https://www.linkedin.com/in/gabriel-melo-dos-santos-dias-90b842314/" target="_blank" class="contact-link">
             <div class="link-card">
                 <h3 style="font-size: 1.2rem; color: #1a73e8;">LinkedIn</h3>
                 <p style="color: #555;">Conecte-se comigo no LinkedIn.</p>
