--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         nav .logo {
-            font-size: 1.8rem;
+            font-size: 1.5rem; /* Reduzido para telas menores */
             font-weight: 600;
             color: #1a73e8;
             text-decoration: none;
@@ -62,7 +62,7 @@
         }
 
         nav .nav-links li {
-            margin-left: 20px;
+            margin-left: 15px; /* Reduzido para telas menores */
         }
 
         nav .nav-links a {
@@ -70,6 +70,7 @@
             color: #333;
             font-weight: 500;
             transition: color 0.3s;
+            font-size: 0.9rem; /* Reduzido para telas menores */
         }
 
         nav .nav-links a:hover {
@@ -115,7 +116,7 @@
         }
 
         header h1 {
-            font-size: 3rem;
+            font-size: 2rem; /* Reduzido para telas menores */
             font-weight: 600;
             opacity: 0;
             animation: fadeIn 1s forwards 0.5s;
@@ -123,16 +124,16 @@
         }
 
         header p {
-            font-size: 1.1rem;
+            font-size: 1rem; /* Reduzido para telas menores */
             font-weight: 400;
-            margin-bottom: 30px;
+            margin-bottom: 20px; /* Reduzido para telas menores */
             opacity: 0;
             animation: fadeIn 1s forwards 0.8s;
             z-index: 2;
         }
 
         .cta-button {
-            padding: 12px 30px;
+            padding: 10px 20px; /* Reduzido para telas menores */
             background-color: #fff;
             color: #1a73e8;
             border: none;
@@ -143,6 +144,7 @@
             opacity: 0;
             animation: fadeIn 1s forwards 1.1s;
             z-index: 2;
+            font-size: 0.9rem; /* Reduzido para telas menores */
         }
 
         .cta-button:hover {
@@ -163,13 +165,13 @@
 
         /* Seções */
         section {
-            padding: 60px 20px;
+            padding: 40px 20px; /* Reduzido para telas menores */
             display: none; /* Começam ocultos */
             opacity: 0;
             transition: opacity 1s ease;
             position: relative;
             background: rgba(255, 255, 255, 0.9);
-            margin: 20px;
+            margin: 10px; /* Reduzido para telas menores */
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             z-index: 1;
@@ -182,17 +184,17 @@
 
         .section-title {
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 20px; /* Reduzido para telas menores */
         }
 
         .section-title h2 {
-            font-size: 2.5rem;
+            font-size: 2rem; /* Reduzido para telas menores */
             color: #1a73e8;
             font-weight: 600;
         }
 
         .section-title p {
-            font-size: 1rem;
+            font-size: 0.9rem; /* Reduzido para telas menores */
             color: #666;
             margin-top: 10px;
         }
@@ -205,20 +207,20 @@
         }
 
         .about-text {
-            max-width: 700px;
-            font-size: 1.1rem;
+            max-width: 100%; /* Ajustado para telas menores */
+            font-size: 1rem; /* Reduzido para telas menores */
             color: #555;
-            margin-bottom: 30px;
+            margin-bottom: 20px; /* Reduzido para telas menores */
         }
 
         /* Espaço para Foto */
         .about-photo {
-            margin-bottom: 30px;
+            margin-bottom: 20px; /* Reduzido para telas menores */
         }
 
         .about-photo img {
-            width: 200px;
-            height: 200px;
+            width: 150px; /* Reduzido para telas menores */
+            height: 150px; /* Reduzido para telas menores */
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid #fff;
@@ -228,7 +230,7 @@
         /* Linha do tempo de cursos */
         .timeline {
             position: relative;
-            max-width: 900px;
+            max-width: 100%; /* Ajustado para telas menores */
             margin: 0 auto;
         }
 
@@ -244,13 +246,13 @@
         }
 
         .container-timeline {
-            padding: 10px 40px;
+            padding: 10px 20px; /* Reduzido para telas menores */
             position: relative;
             background-color: #fff;
-            width: 50%;
-            text-align: right;
+            width: 100%; /* Ajustado para telas menores */
+            text-align: left; /* Ajustado para telas menores */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
+            margin-bottom: 20px; /* Reduzido para telas menores */
             opacity: 0;
             transform: translateY(50px);
             transition: opacity 1s ease, transform 1s ease;
@@ -267,23 +269,23 @@
         }
 
         .container-timeline.right {
-            left: 50%;
+            left: 0; /* Ajustado para telas menores */
         }
 
         .content-timeline {
-            padding: 20px;
+            padding: 15px; /* Reduzido para telas menores */
             background-color: #f9f9f9;
             border-radius: 5px;
         }
 
         .content-timeline h3 {
-            font-size: 1.5rem;
+            font-size: 1.2rem; /* Reduzido para telas menores */
             font-weight: 600;
             color: #1a73e8;
         }
 
         .content-timeline p {
-            font-size: 1rem;
+            font-size: 0.9rem; /* Reduzido para telas menores */
             color: #555;
         }
 
@@ -293,16 +295,16 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
-            max-width: 1200px;
+            max-width: 100%; /* Ajustado para telas menores */
             margin: 0 auto;
         }
 
         .academic-card {
             background-color: #fff;
-            padding: 20px;
+            padding: 15px; /* Reduzido para telas menores */
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: calc(50% - 20px);
+            width: 100%; /* Ajustado para telas menores */
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
@@ -312,14 +314,14 @@
         }
 
         .academic-card h3 {
-            font-size: 1.8rem;
+            font-size: 1.5rem; /* Reduzido para telas menores */
             font-weight: 600;
             color: #1a73e8;
             margin-bottom: 10px;
         }
 
         .academic-card p {
-            font-size: 1rem;
+            font-size: 0.9rem; /* Reduzido para telas menores */
             color: #555;
         }
 
@@ -327,23 +329,23 @@
         .contact-links {
             display: flex;
             justify-content: center;
-            gap: 30px;
+            gap: 20px; /* Reduzido para telas menores */
             flex-wrap: wrap;
-            max-width: 1200px;
+            max-width: 100%; /* Ajustado para telas menores */
             margin: 0 auto;
         }
 
         .contact-link {
             text-decoration: none;
             display: block;
-            width: 250px;
+            width: 100%; /* Ajustado para telas menores */
             max-width: 100%;
             transition: transform 0.3s ease-in-out;
         }
 
         .link-card {
             background-color: #fff;
-            padding: 20px;
+            padding: 15px; /* Reduzido para telas menores */
             text-align: center;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -360,17 +362,29 @@
             font-weight: 600;
             margin-bottom: 10px;
             color: #1a73e8;
+            font-size: 1.2rem; /* Reduzido para telas menores */
         }
 
         .link-card p {
-            font-size: 1rem;
+            font-size: 0.9rem; /* Reduzido para telas menores */
             color: #777;
         }
 
         /* Responsividade */
-        @media (max-width: 1024px) {
+        @media (max-width: 768px) {
             nav .nav-links {
                 display: none;
+                flex-direction: column;
+                background-color: rgba(255, 255, 255, 0.9);
+                position: absolute;
+                top: 60px;
+                left: 0;
+                right: 0;
+                padding: 10px;
+            }
+
+            nav .nav-links.active {
+                display: flex;
             }
 
             .menu-toggle {
@@ -378,41 +392,34 @@
             }
 
             header h1 {
-                font-size: 2.2rem;
+                font-size: 1.8rem; /* Reduzido para telas menores */
+            }
+
+            header p {
+                font-size: 0.9rem; /* Reduzido para telas menores */
             }
 
             .cta-button {
-                font-size: 1rem;
-                padding: 10px 20px;
-            }
-
-            .container-timeline {
-                width: 100%;
-                text-align: left;
+                font-size: 0.9rem; /* Reduzido para telas menores */
+                padding: 8px 16px; /* Reduzido para telas menores */
             }
 
             .timeline::after {
-                left: 30px;
+                left: 20px; /* Ajustado para telas menores */
+            }
+
+            .container-timeline {
+                width: 100%; /* Ajustado para telas menores */
+                text-align: left; /* Ajustado para telas menores */
             }
 
             .academic-card {
-                width: 100%;
+                width: 100%; /* Ajustado para telas menores */
             }
 
             .contact-links {
                 flex-direction: column;
                 align-items: center;
-            }
-        }
-
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2rem;
-            }
-
-            .about-photo img {
-                width: 120px;
-                height: 120px;
             }
         }
 
