--- a/index.html
+++ b/index.html
@@ -20,17 +20,6 @@
             color: #fff;
             line-height: 1.6;
             overflow-x: hidden;
-            position: relative;
-        }
-
-        /* Fundo animado com partículas */
-        #particles-js {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: 0;
         }
 
         /* Navegação */
@@ -49,7 +38,7 @@
         }
 
         nav .logo {
-            font-size: 1.5rem; /* Reduzido para telas menores */
+            font-size: 1.5rem;
             font-weight: 600;
             color: #1a73e8;
             text-decoration: none;
@@ -62,7 +51,7 @@
         }
 
         nav .nav-links li {
-            margin-left: 15px; /* Reduzido para telas menores */
+            margin-left: 15px;
         }
 
         nav .nav-links a {
@@ -70,7 +59,7 @@
             color: #333;
             font-weight: 500;
             transition: color 0.3s;
-            font-size: 0.9rem; /* Reduzido para telas menores */
+            font-size: 0.9rem;
         }
 
         nav .nav-links a:hover {
@@ -104,36 +93,23 @@
             overflow: hidden;
         }
 
-        header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.3);
-            z-index: 1;
-        }
-
         header h1 {
-            font-size: 2rem; /* Reduzido para telas menores */
+            font-size: 2.5rem;
             font-weight: 600;
             opacity: 0;
             animation: fadeIn 1s forwards 0.5s;
-            z-index: 2;
         }
 
         header p {
-            font-size: 1rem; /* Reduzido para telas menores */
+            font-size: 1.2rem;
             font-weight: 400;
-            margin-bottom: 20px; /* Reduzido para telas menores */
+            margin-bottom: 20px;
             opacity: 0;
             animation: fadeIn 1s forwards 0.8s;
-            z-index: 2;
         }
 
         .cta-button {
-            padding: 10px 20px; /* Reduzido para telas menores */
+            padding: 10px 20px;
             background-color: #fff;
             color: #1a73e8;
             border: none;
@@ -143,8 +119,6 @@
             transition: background-color 0.3s, color 0.3s;
             opacity: 0;
             animation: fadeIn 1s forwards 1.1s;
-            z-index: 2;
-            font-size: 0.9rem; /* Reduzido para telas menores */
         }
 
         .cta-button:hover {
@@ -165,16 +139,14 @@
 
         /* Seções */
         section {
-            padding: 40px 20px; /* Reduzido para telas menores */
-            display: none; /* Começam ocultos */
+            padding: 60px 20px;
+            display: none;
             opacity: 0;
             transition: opacity 1s ease;
-            position: relative;
             background: rgba(255, 255, 255, 0.9);
-            margin: 10px; /* Reduzido para telas menores */
+            margin: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            z-index: 1;
         }
 
         section.visible {
@@ -184,17 +156,17 @@
 
         .section-title {
             text-align: center;
-            margin-bottom: 20px; /* Reduzido para telas menores */
+            margin-bottom: 30px;
         }
 
         .section-title h2 {
-            font-size: 2rem; /* Reduzido para telas menores */
+            font-size: 2.5rem;
             color: #1a73e8;
             font-weight: 600;
         }
 
         .section-title p {
-            font-size: 0.9rem; /* Reduzido para telas menores */
+            font-size: 1rem;
             color: #666;
             margin-top: 10px;
         }
@@ -207,20 +179,19 @@
         }
 
         .about-text {
-            max-width: 100%; /* Ajustado para telas menores */
-            font-size: 1rem; /* Reduzido para telas menores */
+            max-width: 800px;
+            font-size: 1.1rem;
             color: #555;
-            margin-bottom: 20px; /* Reduzido para telas menores */
+            margin-bottom: 20px;
         }
 
-        /* Espaço para Foto */
         .about-photo {
-            margin-bottom: 20px; /* Reduzido para telas menores */
+            margin-bottom: 20px;
         }
 
         .about-photo img {
-            width: 150px; /* Reduzido para telas menores */
-            height: 150px; /* Reduzido para telas menores */
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid #fff;
@@ -230,7 +201,7 @@
         /* Linha do tempo de cursos */
         .timeline {
             position: relative;
-            max-width: 100%; /* Ajustado para telas menores */
+            max-width: 800px;
             margin: 0 auto;
         }
 
@@ -246,13 +217,13 @@
         }
 
         .container-timeline {
-            padding: 10px 20px; /* Reduzido para telas menores */
+            padding: 20px;
             position: relative;
             background-color: #fff;
-            width: 100%; /* Ajustado para telas menores */
-            text-align: left; /* Ajustado para telas menores */
+            width: 45%;
+            text-align: left;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px; /* Reduzido para telas menores */
+            margin-bottom: 20px;
             opacity: 0;
             transform: translateY(50px);
             transition: opacity 1s ease, transform 1s ease;
@@ -269,23 +240,23 @@
         }
 
         .container-timeline.right {
-            left: 0; /* Ajustado para telas menores */
+            left: 55%;
         }
 
         .content-timeline {
-            padding: 15px; /* Reduzido para telas menores */
+            padding: 20px;
             background-color: #f9f9f9;
             border-radius: 5px;
         }
 
         .content-timeline h3 {
-            font-size: 1.2rem; /* Reduzido para telas menores */
+            font-size: 1.5rem;
             font-weight: 600;
             color: #1a73e8;
         }
 
         .content-timeline p {
-            font-size: 0.9rem; /* Reduzido para telas menores */
+            font-size: 1rem;
             color: #555;
         }
 
@@ -295,16 +266,16 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
-            max-width: 100%; /* Ajustado para telas menores */
+            max-width: 1200px;
             margin: 0 auto;
         }
 
         .academic-card {
             background-color: #fff;
-            padding: 15px; /* Reduzido para telas menores */
+            padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 100%; /* Ajustado para telas menores */
+            width: calc(50% - 20px);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
@@ -314,14 +285,14 @@
         }
 
         .academic-card h3 {
-            font-size: 1.5rem; /* Reduzido para telas menores */
+            font-size: 1.5rem;
             font-weight: 600;
             color: #1a73e8;
             margin-bottom: 10px;
         }
 
         .academic-card p {
-            font-size: 0.9rem; /* Reduzido para telas menores */
+            font-size: 1rem;
             color: #555;
         }
 
@@ -329,23 +300,23 @@
         .contact-links {
             display: flex;
             justify-content: center;
-            gap: 20px; /* Reduzido para telas menores */
+            gap: 20px;
             flex-wrap: wrap;
-            max-width: 100%; /* Ajustado para telas menores */
+            max-width: 800px;
             margin: 0 auto;
         }
 
         .contact-link {
             text-decoration: none;
             display: block;
-            width: 100%; /* Ajustado para telas menores */
-            max-width: 100%;
+            width: 100%;
+            max-width: 300px;
             transition: transform 0.3s ease-in-out;
         }
 
         .link-card {
             background-color: #fff;
-            padding: 15px; /* Reduzido para telas menores */
+            padding: 20px;
             text-align: center;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -362,11 +333,11 @@
             font-weight: 600;
             margin-bottom: 10px;
             color: #1a73e8;
-            font-size: 1.2rem; /* Reduzido para telas menores */
+            font-size: 1.5rem;
         }
 
         .link-card p {
-            font-size: 0.9rem; /* Reduzido para telas menores */
+            font-size: 1rem;
             color: #777;
         }
 
@@ -392,29 +363,33 @@
             }
 
             header h1 {
-                font-size: 1.8rem; /* Reduzido para telas menores */
+                font-size: 2rem;
             }
 
             header p {
-                font-size: 0.9rem; /* Reduzido para telas menores */
+                font-size: 1rem;
             }
 
             .cta-button {
-                font-size: 0.9rem; /* Reduzido para telas menores */
-                padding: 8px 16px; /* Reduzido para telas menores */
+                font-size: 1rem;
+                padding: 10px 20px;
             }
 
             .timeline::after {
-                left: 20px; /* Ajustado para telas menores */
+                left: 20px;
             }
 
             .container-timeline {
-                width: 100%; /* Ajustado para telas menores */
-                text-align: left; /* Ajustado para telas menores */
+                width: 100%;
+                text-align: left;
+            }
+
+            .container-timeline.right {
+                left: 0;
             }
 
             .academic-card {
-                width: 100%; /* Ajustado para telas menores */
+                width: 100%;
             }
 
             .contact-links {
@@ -439,9 +414,6 @@
     </style>
 </head>
 <body>
-    <!-- Fundo animado com partículas -->
-    <div id="particles-js"></div>
-
     <nav>
         <a href="#landing" class="logo">Gabriel Melo dos Santos Dias</a>
         <div class="menu-toggle">
@@ -499,7 +471,7 @@
             <div class="container-timeline right">
                 <div class="content-timeline">
                     <h3>Scrum Foundation Professional</h3>
-                    <p>O scrum Foundation Professional Certificate é uma certificação reconhecida internacionalmente que comprova o conhecimento e a compreensão dos princípios e práticas do Scrum.</p>
+                    <p>O Scrum Foundation Professional Certificate é uma certificação reconhecida internacionalmente que comprova o conhecimento e a compreensão dos princípios e práticas do Scrum.</p>
                 </div>
             </div>
             <div class="container-timeline left">
@@ -511,7 +483,8 @@
             <div class="container-timeline right">
                 <div class="content-timeline">
                     <h3>Outras certificações</h3>
-                    <p>Além de todos esses cursos, possuo outros em minha carreira acadêmica. Em parceria com o SENAI, realizei um curso enriquecedor de Power BI, com carga horária de 40 horas. E uma certificação que durou um mês, sobre computação em nuvem, do Google. Ademais, tenho em meu currículo certificados de Inglês e Espanhol, além de diversas competências na área de tecnologia, todas com carga horária acima de 3 horas. E é de suma importância ressaltar que eu concluí um curso da IBM (International Business Machines Corporation) que me rendeu uma licença de fundamentos da inteligência artificial.
+                    <p>Além de todos esses cursos, possuo outros em minha carreira acadêmica. Em parceria com o SENAI, realizei um curso enriquecedor de Power BI, com carga horária de 40 horas. E uma certificação que durou um mês, sobre computação em nuvem, do Google. Ademais, tenho em meu currículo certificados de Inglês e Espanhol, além de diversas competências na área de tecnologia, todas com carga horária acima de 3 horas. E é de suma importância ressaltar que eu concluí um curso da IBM (International Business Machines Corporation) que me rendeu uma licença de fundamentos da inteligência artificial.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -578,116 +551,7 @@
         </div>
     </section>
 
-    <!-- Script para o fundo animado com partículas -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
-        // Configuração do fundo animado com partículas
-        particlesJS("particles-js", {
-            particles: {
-                number: {
-                    value: 80,
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                color: {
-                    value: "#ffffff"
-                },
-                shape: {
-                    type: "circle",
-                    stroke: {
-                        width: 0,
-                        color: "#000000"
-                    },
-                    polygon: {
-                        nb_sides: 5
-                    }
-                },
-                opacity: {
-                    value: 0.5,
-                    random: false,
-                    anim: {
-                        enable: false,
-                        speed: 1,
-                        opacity_min: 0.1,
-                        sync: false
-                    }
-                },
-                size: {
-                    value: 3,
-                    random: true,
-                    anim: {
-                        enable: false,
-                        speed: 40,
-                        size_min: 0.1,
-                        sync: false
-                    }
-                },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#ffffff",
-                    opacity: 0.4,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 6,
-                    direction: "none",
-                    random: false,
-                    straight: false,
-                    out_mode: "out",
-                    bounce: false,
-                    attract: {
-                        enable: false,
-                        rotateX: 600,
-                        rotateY: 1200
-                    }
-                }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: {
-                    onhover: {
-                        enable: true,
-                        mode: "repulse"
-                    },
-                    onclick: {
-                        enable: true,
-                        mode: "push"
-                    },
-                    resize: true
-                },
-                modes: {
-                    grab: {
-                        distance: 400,
-                        line_linked: {
-                            opacity: 1
-                        }
-                    },
-                    bubble: {
-                        distance: 400,
-                        size: 40,
-                        duration: 2,
-                        opacity: 8,
-                        speed: 3
-                    },
-                    repulse: {
-                        distance: 200,
-                        duration: 0.4
-                    },
-                    push: {
-                        particles_nb: 4
-                    },
-                    remove: {
-                        particles_nb: 2
-                    }
-                }
-            },
-            retina_detect: true
-        });
-
         // Função para mostrar as seções quando rolar a página
         function revealSectionsOnScroll() {
             const sections = document.querySelectorAll('section');
